--- a/spring-pub/src/main/resources/application.yml
+++ b/spring-pub/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 spring:
   data:
     redis:
-      database: 0
-      host: redis
-      port: 6379
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
 
 
