--- a/spring-sub/src/main/resources/application.yml
+++ b/spring-sub/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 spring:
   data:
     redis:
-      database: 0
-      host: redis
-      port: 6379
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
