--- a/spring-sub/src/main/resources/application.yml
+++ b/spring-sub/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+logging:
+    level:
+        root: INFO
+        org.springframework.web: DEBUG
+        io.lettuce: DEBUG
 spring:
   data:
     redis:
